--- a/static/egrafi.html
+++ b/static/egrafi.html
@@ -136,7 +136,6 @@
   </div>
 
   <script>
-      let waitingForApproval = false;
     async function sendData(months) {
       const name = document.getElementById("name").value.trim();
       const messageEl = document.getElementById("message");
@@ -156,10 +155,18 @@
 
         const result = await response.json();
 
-         messageEl.innerText = "Η αίτηση καταχωρήθηκε και περιμένει έγκριση";
-         messageEl.style.color = "red";
-         waitingForApproval = true;
-        
+        if (result.pelatis) {
+          messageEl.innerText = result.message;
+          messageEl.style.color = "green";
+
+          // Γέμισμα κάρτας
+          document.getElementById("c-name").innerText = result.pelatis.name;
+          document.getElementById("c-start").innerText = result.pelatis.startDate;
+          document.getElementById("c-end").innerText = result.pelatis.endDate;
+
+          // Εμφάνιση κάρτας και κουμπιού
+          document.getElementById("card").style.display = "block";
+          document.getElementById("download-btn").style.display = "inline-block";
         } else {
           messageEl.innerText = result.message;
           messageEl.style.color = "red";
@@ -179,35 +186,6 @@
         link.click();
       });
     }
-    setInterval(async () => {
-  if (!waitingForApproval) return;
-
-  const name = document.getElementById("name").value.trim();
-  if (!name) return;
-
-  const res = await fetch("/api/pelatais");
-  const data = await res.json();
-
-  const user = data.find(
-    p => p.name === name && p.status === "approved"
-  );
-
-  if (user) {
-    // Γέμισμα κάρτας
-    document.getElementById("c-name").innerText = user.name;
-    document.getElementById("c-start").innerText = user.startDate;
-    document.getElementById("c-end").innerText = user.endDate;
-
-    document.getElementById("card").style.display = "block";
-    document.getElementById("download-btn").style.display = "inline-block";
-
-    document.getElementById("message").innerText = "Η συνδρομή εγκρίθηκε!";
-    document.getElementById("message").style.color = "green";
-
-    waitingForApproval = false;
-  }
-}, 3000);
-
   </script>
 </body>
 </html>
